[gd_scene load_steps=15 format=2]

[ext_resource path="res://misc/title.png" type="Texture" id=1]
[ext_resource path="res://ComicMono.tres" type="DynamicFont" id=2]
[ext_resource path="res://models/godot/hiver.tscn" type="PackedScene" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://scripts/KenshitHumanMesh.gd" type="Script" id=5]
[ext_resource path="res://models/godot/greenlander_female.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/godot/shrek_male.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/godot/skeleton.tscn" type="PackedScene" id=8]
[ext_resource path="res://models/godot/greenlander_male.tscn" type="PackedScene" id=9]
[ext_resource path="res://models/godot/shrek_female.tscn" type="PackedScene" id=10]
[ext_resource path="res://models/godot/scorch_male.tscn" type="PackedScene" id=11]
[ext_resource path="res://models/godot/scorch_female.tscn" type="PackedScene" id=12]
[ext_resource path="res://misc/gender.png" type="Texture" id=13]
[ext_resource path="res://music/kenshit overture.mp3" type="AudioStream" id=14]

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.80184 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NEW" type="Button" parent="Control/Title"]
margin_left = 49.446
margin_top = 658.289
margin_right = 117.446
margin_bottom = 678.289
custom_fonts/font = ExtResource( 2 )
text = "NEW GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CONT" type="Button" parent="Control/Title"]
margin_left = 403.459
margin_top = 678.764
margin_right = 471.459
margin_bottom = 698.764
custom_fonts/font = ExtResource( 2 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/New"]
margin_left = 76.0156
margin_top = 549.02
margin_right = 279.016
margin_bottom = 602.02
custom_fonts/font = ExtResource( 2 )
text = "wHAT KIND 0F KEN SHIT DO U 
WANT TO Be?

DONT DO NOT THINK ABOUT THIS TOO MUCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/New"]
margin_left = 537.531
margin_top = 653.825
margin_right = 754.531
margin_bottom = 664.825
custom_fonts/font = ExtResource( 2 )
text = "WHAT SHOULD WE CALL YOU?! HUH?!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control/New"]
margin_left = 628.938
margin_top = 534.11
margin_right = 845.938
margin_bottom = 545.11
custom_fonts/font = ExtResource( 2 )
text = "HAIR CUTS!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VAPER" type="Button" parent="Control/New"]
margin_left = 251.008
margin_top = 639.706
margin_right = 340.008
margin_bottom = 659.706
custom_fonts/font = ExtResource( 2 )
text = "VAPE NATION"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SHREK" type="Button" parent="Control/New"]
margin_left = 156.514
margin_top = 662.385
margin_right = 224.514
margin_bottom = 682.385
custom_fonts/font = ExtResource( 2 )
text = "SHREK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HEAD HUNTER" type="Button" parent="Control/New"]
margin_left = 54.4604
margin_top = 686.323
margin_right = 122.46
margin_bottom = 706.323
custom_fonts/font = ExtResource( 2 )
text = "HEAD HUNTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SHEEPLE" type="Button" parent="Control/New"]
margin_left = 242.189
margin_top = 692.623
margin_right = 310.189
margin_bottom = 712.623
custom_fonts/font = ExtResource( 2 )
text = "STICK GUY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UC" type="Button" parent="Control/New"]
margin_left = 22.9624
margin_top = 619.547
margin_right = 90.9624
margin_bottom = 639.547
custom_fonts/font = ExtResource( 2 )
text = "UNIVERISITY OF CINCINATTI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charname" type="TextEdit" parent="Control/New"]
margin_left = 504.406
margin_top = 666.575
margin_right = 782.406
margin_bottom = 706.575
custom_fonts/font = ExtResource( 2 )

[node name="Label3" type="Label" parent="Control/New"]
margin_left = 826.267
margin_top = 521.134
margin_right = 1036.27
margin_bottom = 709.134
custom_fonts/font = ExtResource( 2 )
text = "DESCIRBE YOURSELF!! !1

THICC NESS


TALL NESS


LEG DAy


SCENE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thick" type="HSlider" parent="Control/New"]
margin_left = 822.249
margin_top = 562.795
margin_right = 973.249
margin_bottom = 578.795
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tall" type="HSlider" parent="Control/New"]
margin_left = 827.594
margin_top = 608.23
margin_right = 978.594
margin_bottom = 624.23
max_value = 1.0
step = 0.01
value = 0.5

[node name="leg" type="HSlider" parent="Control/New"]
margin_left = 830.266
margin_top = 653.666
margin_right = 981.266
margin_bottom = 669.666
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene" type="HSlider" parent="Control/New"]
margin_left = 830.266
margin_top = 688.127
margin_right = 981.266
margin_bottom = 704.127
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startnewgame" type="Button" parent="Control/New"]
margin_left = 1031.8
margin_top = 670.148
margin_right = 1288.8
margin_bottom = 690.148
custom_fonts/font = ExtResource( 2 )
text = "PLAY!! (dont click until jack says)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/New"]
margin_left = 380.971
margin_top = 561.249
margin_right = 760.971
margin_bottom = 764.249
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHGEN" type="Button" parent="Control/New"]
margin_left = 381.51
margin_top = 623.386
margin_right = 536.51
margin_bottom = 643.386
custom_fonts/font = ExtResource( 2 )
text = "CHANGE GENRDER"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBASSDROP" type="Button" parent="Control/New"]
margin_left = 561.663
margin_top = 567.136
margin_right = 650.663
margin_bottom = 587.136
custom_fonts/font = ExtResource( 2 )
text = "BASSDROP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBUZZSAW" type="Button" parent="Control/New"]
margin_left = 567.656
margin_top = 595.604
margin_right = 656.656
margin_bottom = 615.604
custom_fonts/font = ExtResource( 2 )
text = "BUZZ SAW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPOMP" type="Button" parent="Control/New"]
margin_left = 694.513
margin_top = 588.612
margin_right = 783.513
margin_bottom = 608.612
custom_fonts/font = ExtResource( 2 )
text = "POMPADORABLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSLIMJIM" type="Button" parent="Control/New"]
margin_left = 677.532
margin_top = 559.645
margin_right = 766.532
margin_bottom = 579.645
custom_fonts/font = ExtResource( 2 )
text = "SLIMMJIM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSPIKEY" type="Button" parent="Control/New"]
margin_left = 596.623
margin_top = 549.157
margin_right = 685.623
margin_bottom = 569.157
custom_fonts/font = ExtResource( 2 )
text = "SPIKEY2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HAPEX" type="Button" parent="Control/New"]
margin_left = 613.105
margin_top = 580.621
margin_right = 702.105
margin_bottom = 600.621
custom_fonts/font = ExtResource( 2 )
text = "THE APEX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HFANTANO" type="Button" parent="Control/New"]
margin_left = 637.078
margin_top = 625.071
margin_right = 726.078
margin_bottom = 645.071
custom_fonts/font = ExtResource( 2 )
text = "FANTANO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HCUBES" type="Button" parent="Control/New"]
margin_left = 559.166
margin_top = 617.08
margin_right = 648.166
margin_bottom = 637.08
custom_fonts/font = ExtResource( 2 )
text = "[]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H5DOLLAR" type="Button" parent="Control/New"]
margin_left = 644.569
margin_top = 605.593
margin_right = 782.569
margin_bottom = 625.593
custom_fonts/font = ExtResource( 2 )
text = "5 DOLAAR MILKSHAKE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HDUELIST" type="Button" parent="Control/New"]
margin_left = 714.49
margin_top = 623.572
margin_right = 803.49
margin_bottom = 643.572
custom_fonts/font = ExtResource( 2 )
text = "THE DUELIST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char_sel" type="Spatial" parent="."]
transform = Transform( 0.847909, 0, 0.530141, 0, 1, 0, -0.530141, 0, 0.847909, -1.69865, -0.817979, -2.69569 )

[node name="vaper_gf" parent="char_sel" instance=ExtResource( 12 )]
script = ExtResource( 5 )

[node name="vaper_gm" parent="char_sel" instance=ExtResource( 11 )]
script = ExtResource( 5 )

[node name="uc_gf" parent="char_sel" instance=ExtResource( 6 )]
script = ExtResource( 5 )

[node name="uc_gm" parent="char_sel" instance=ExtResource( 9 )]
script = ExtResource( 5 )

[node name="shrek_gf" parent="char_sel" instance=ExtResource( 10 )]
script = ExtResource( 5 )

[node name="shrek_gm" parent="char_sel" instance=ExtResource( 7 )]
script = ExtResource( 5 )

[node name="skeleton" parent="char_sel" instance=ExtResource( 8 )]
script = ExtResource( 5 )

[node name="hive" parent="char_sel" instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Control/Title/NEW" to="Control" method="_on_NEW_pressed"]
[connection signal="pressed" from="Control/Title/CONT" to="Control" method="_on_CONT_pressed"]
[connection signal="pressed" from="Control/New/VAPER" to="Control" method="_on_VAPER_pressed"]
[connection signal="pressed" from="Control/New/SHREK" to="Control" method="_on_SHREK_pressed"]
[connection signal="pressed" from="Control/New/HEAD HUNTER" to="Control" method="_on_HEAD_HUNTER_pressed"]
[connection signal="pressed" from="Control/New/SHEEPLE" to="Control" method="_on_SHEEPLE_pressed"]
[connection signal="pressed" from="Control/New/UC" to="Control" method="_on_UC_pressed"]
[connection signal="pressed" from="Control/New/startnewgame" to="Control" method="_on_startnewgame_pressed"]
[connection signal="pressed" from="Control/New/CHGEN" to="Control" method="_on_CHGEN_pressed"]
[connection signal="pressed" from="Control/New/HBASSDROP" to="Control" method="_on_HBASSDROP_pressed"]
[connection signal="pressed" from="Control/New/HBUZZSAW" to="Control" method="_on_HBUZZSAW_pressed"]
[connection signal="pressed" from="Control/New/HPOMP" to="Control" method="_on_HPOMP_pressed"]
[connection signal="pressed" from="Control/New/HSLIMJIM" to="Control" method="_on_HSLIMJIM_pressed"]
[connection signal="pressed" from="Control/New/HSPIKEY" to="Control" method="_on_HSPIKEY_pressed"]
[connection signal="pressed" from="Control/New/HAPEX" to="Control" method="_on_HAPEX_pressed"]
[connection signal="pressed" from="Control/New/HFANTANO" to="Control" method="_on_HFANTANO_pressed"]
[connection signal="pressed" from="Control/New/HCUBES" to="Control" method="_on_HCUBES_pressed"]
[connection signal="pressed" from="Control/New/H5DOLLAR" to="Control" method="_on_H5DOLLAR_pressed"]
[connection signal="pressed" from="Control/New/HDUELIST" to="Control" method="_on_HDUELIST_pressed"]
